objects/players__c.object
<CustomObject>
    <fields>
        <fullName>Salary__c</fullName>
        <label>Salary</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>quality__c</fullName>
        <label>quality</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>bowler</fullName>
                </value>
                <value>
                    <fullName>batsmen</fullName>
                </value>
                <value>
                    <fullName>allrounder</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>teamrelation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>team</label>
        <referenceTo>team__c</referenceTo>
        <relationshipLabel>players</relationshipLabel>
        <relationshipName>players</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>player</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>players Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>players</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>